Refactor code structure for improved readability and maintainability

--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
     <section class="contact-box" data-aos="fade" data-aos-duration="1000">
         <div class="contact-box-left">
             <div class="contact-form">
-                <h1>CONTACT US</h1>
+                <span>CONTACT US</span>
                 <form action="submit-contact.php" method="POST">
                     <div class="form-floating">
                         <input type="text" class="form-control" name="name" id="name" placeholder="Name" required>
@@ -152,16 +152,16 @@
 
     <!-- Corporate Office Start -->
     <section class="corporate-office" data-aos="fade" data-aos-duration="1000">
-        <h1>Office & Showroom</h1>
+        <h2>Office & Showroom</h2>
         <div class="corp-card-row">
             <div class="corp-card">
-                <h2>Corporate Office</h2>
+                <h3>Corporate Office</h3>
                 <p>“Rudramani” 1720,Laskarhat EM Bypass, Kolkata – 700 039</p>
                 <p>Phone: 1800 309 3876</p>
                 <a href="https://maps.app.goo.gl/TTNpR6fGuCyFocMe8" target="_blank">View on map</a>
             </div>
             <div class="corp-card">
-                <h2>Nirmal Wires Retail Store</h2>
+                <h3>Nirmal Wires Retail Store</h3>
                 <p>62 A, Netaji Subhas Rd, Fairley Place, Barabazar Market, Kolkata, West Bengal 700001</p>
                 <p>Phone: 1800 309 3876</p>
                 <a href="https://maps.app.goo.gl/UupErqpYJuDu5HRN8" target="_blank">View on map</a>
@@ -172,40 +172,40 @@
 
     <!-- Manufacturing Units Start -->
     <section class="manufacturing-units" data-aos="fade" data-aos-duration="1000">
-        <h1>Manufacturing Units</h1>
+        <h2>Manufacturing Units</h2>
         <div class="manufacturing-card-row">
             <div class="manufacturing-card">
-                <h2>Nirmal Wires Pvt Ltd (Madhyamgram unit)</h2>
+                <h3>Nirmal Wires Pvt Ltd (Madhyamgram unit)</h3>
                 <p>Roy Bagan, Jessore Road, Madhyamgram, Kolkata – 700 129</p>
                 <a href="https://maps.app.goo.gl/CFBRwgdBLLn4A7H68" target="_blank">View on map</a>
             </div>
             <div class="manufacturing-card">
-                <h2>Nirmal Wires Pvt Ltd (Deulti unit)</h2>
+                <h3>Nirmal Wires Pvt Ltd (Deulti unit)</h3>
                 <p>Village: Ishwaripur Deulti, P.O.: Barunda, P.S.: Bagnan, Howrah-711 303</p>
                 <a href="https://maps.app.goo.gl/9E4VuQUoipFnfWdz9" target="_blank">View on map</a>
             </div>
             <div class="manufacturing-card">
-                <h2>Nirmal wires pvt Ltd ( Khordha unit)</h2>
+                <h3>Nirmal wires pvt Ltd ( Khordha unit)</h3>
                 <p>Plot No. 321, 325/1386, Malipada, Champajhar Khordha, Odisha- 752018</p>
                 <a href="https://maps.app.goo.gl/U5vVb1NuPG6aq5GYA" target="_blank">View on map</a>
             </div>
             <div class="manufacturing-card">
-                <h2>Cee Dee Metalloys (P) Ltd.</h2>
+                <h3>Cee Dee Metalloys (P) Ltd.</h3>
                 <p>No.12,Veerasandra Industrial Area, Electronic City Post, Hosur Road, Bangalore -560100</p>
                 <a href="https://maps.app.goo.gl/3QRyofvKfmHf5hGK7" target="_blank">View on map</a>
             </div>
             <div class="manufacturing-card">
-                <h2>Shri Ambika Metaliks Pvt Ltd</h2>
+                <h3>Shri Ambika Metaliks Pvt Ltd</h3>
                 <p>8/2, Nutanpara Road Liluah, Howrah – 711 204</p>
                 <a href="https://maps.app.goo.gl/LDaDkoB1a3rE5hScA" target="_blank">View on map</a>
             </div>
             <div class="manufacturing-card">
-                <h2>Shieldarc Equipments Pvt Ltd</h2>
+                <h3>Shieldarc Equipments Pvt Ltd</h3>
                 <p>58/4 N.S. Road Liluah, Howrah – 711 204</p>
                 <a href="#">View on map</a>
             </div>
             <div class="manufacturing-card">
-                <h2>Central Stores Supplies (P) Ltd</h2>
+                <h3>Central Stores Supplies (P) Ltd</h3>
                 <p>391 (47 New), G.T. Road Belur Howrah: 711 201</p>
                 <a href="#">View on map</a>
             </div>
