--- a/our-story.html
+++ b/our-story.html
@@ -114,7 +114,7 @@
     <!-- Our Journey Start -->
     <section class="our-journey">
         <div class="our-journey-content">
-            <h1 data-aos="fade" data-aos-duration="1000">OUR JOURNEY</h1>
+            <h2 data-aos="fade" data-aos-duration="1000">OUR JOURNEY</h2>
 
             <div class="swiper ourJourneySwiper">
                 <div class="swiper-wrapper timeline-slide-container">
@@ -125,9 +125,9 @@
                     <!-- Slide 2 -->
                     <div class="swiper-slide timeline-slide">
                         <div class="timeline-content" data-aos="fade" data-aos-duration="1000">
-                            <h2>1971</h2>
-                            <h3>Beginning of wire drawing</h3>
-                            <p>Our journey began at our inaugural manufacturing facility in Belur under the Central Stores Supplies department.</p>
+                            <span>1971</span>
+                            <p class="timeline-title">Beginning of wire drawing</p>
+                            <p class="timeline-desc">Our journey began at our inaugural manufacturing facility in Belur under the Central Stores Supplies department.</p>
                         </div>
                         <div class="timeline-image" data-aos="fade" data-aos-duration="1000">
                             <img src="assets/images/timeline/1971.jpeg" alt="image" class="w-100 h-100">
@@ -136,9 +136,9 @@
                     <!-- Slide 3 -->
                     <div class="swiper-slide timeline-slide">
                         <div class="timeline-content" data-aos="fade" data-aos-duration="1000">
-                            <h2>1995</h2>
-                            <h3>Welding electrode production</h3>
-                            <p>Beginning of a new production initiative to manufacture top notch welding electrodes under the name of Shieldarc Equipments.</p>
+                            <span>1995</span>
+                            <p class="timeline-title">Welding electrode production</p>
+                            <p class="timeline-desc">Beginning of a new production initiative to manufacture top notch welding electrodes under the name of Shieldarc Equipments.</p>
                         </div>
                         <div class="timeline-image" data-aos="fade" data-aos-duration="1000">
                             <img src="assets/images/timeline/1995.jpg" alt="image" class="w-100 h-100">
@@ -147,9 +147,9 @@
                     <!-- Slide 4 -->
                     <div class="swiper-slide timeline-slide">
                         <div class="timeline-content" data-aos="fade" data-aos-duration="1000">
-                            <h2>1996</h2>
-                            <h3>Ambika Metalliks</h3>
-                            <p>Embarking on a new venture to manufacture Hot rolled steel products.</p>
+                            <span>1996</span>
+                            <p class="timeline-title">Ambika Metalliks</p>
+                            <p class="timeline-desc">Embarking on a new venture to manufacture Hot rolled steel products.</p>
                         </div>
                         <div class="timeline-image" data-aos="fade" data-aos-duration="1000">
                             <img src="assets/images/timeline/1996.jpeg" alt="image" class="w-100 h-100">
@@ -158,9 +158,9 @@
                     <!-- Slide 5 -->
                     <div class="swiper-slide timeline-slide">
                         <div class="timeline-content" data-aos="fade" data-aos-duration="1000">
-                            <h2>2003</h2>
-                            <h3>Launch of Tricon</h3>
-                            <p>A revolutionary high strength deformed bar that fortified our commitment towards quality and innovation.</p>
+                            <span>2003</span>
+                            <p class="timeline-title">Launch of Tricon</p>
+                            <p class="timeline-desc">A revolutionary high strength deformed bar that fortified our commitment towards quality and innovation.</p>
                         </div>
                         <div class="timeline-image" data-aos="fade" data-aos-duration="1000">
                             <img src="assets/images/timeline/2003.jpg" alt="image">
@@ -169,9 +169,9 @@
                     <!-- Slide 6 -->
                     <div class="swiper-slide timeline-slide">
                         <div class="timeline-content" data-aos="fade" data-aos-duration="1000">
-                            <h2>2010</h2>
-                            <h3>Commencement of Rudramani Project</h3>
-                            <p>Our first venture in real estate, the Rudramani Project, is now a major part of where Group Nirmal stands today.</p>
+                            <span>2010</span>
+                            <p class="timeline-title">Commencement of Rudramani Project</p>
+                            <p class="timeline-desc">Our first venture in real estate, the Rudramani Project, is now a major part of where Group Nirmal stands today.</p>
                         </div>
                         <div class="timeline-image" data-aos="fade" data-aos-duration="1000">
                             <img src="assets/images/timeline/2010.jpg" alt="image">
@@ -180,9 +180,9 @@
                     <!-- Slide 7 -->
                     <div class="swiper-slide timeline-slide">
                         <div class="timeline-content" data-aos="fade" data-aos-duration="1000">
-                            <h2>2013</h2>
-                            <h3>Deulti Plant Inaugration</h3>
-                            <p>New State-of-the-art Manufacturing facility of NWPL was established at Deulti which boosted production capacity to 4500 tons per month.</p>
+                            <span>2013</span>
+                            <p class="timeline-title">Deulti Plant Inaugration</p>
+                            <p class="timeline-desc">New State-of-the-art Manufacturing facility of NWPL was established at Deulti which boosted production capacity to 4500 tons per month.</p>
                         </div>
                         <div class="timeline-image" data-aos="fade" data-aos-duration="1000">
                             <img src="assets/images/timeline/2013.jpg" alt="image">
@@ -191,9 +191,9 @@
                     <!-- Slide 8 -->
                     <div class="swiper-slide timeline-slide">
                         <div class="timeline-content" data-aos="fade" data-aos-duration="1000">
-                            <h2>2014</h2>
-                            <h3>MIG Wire Production</h3>
-                            <p>Kickstarting MIG Wire production & establishment of manufacturing unit 2 under Shieldarc Equipments.</p>
+                            <span>2014</span>
+                            <p class="timeline-title">MIG Wire Production</p>
+                            <p class="timeline-desc">Kickstarting MIG Wire production & establishment of manufacturing unit 2 under Shieldarc Equipments.</p>
                         </div>
                         <div class="timeline-image" data-aos="fade" data-aos-duration="1000">
                             <img src="assets/images/timeline/2014.jpg" alt="image">
@@ -202,9 +202,9 @@
                     <!-- Slide 9 -->
                     <div class="swiper-slide timeline-slide">
                         <div class="timeline-content" data-aos="fade" data-aos-duration="1000">
-                            <h2>2018</h2>
-                            <h3>Completion of Rudramani Project</h3>
-                            <p>Marking the completion of Rudramani Project, Group Nirmal shifted corporate operations to Rudramani Builduing.</p>
+                            <span>2018</span>
+                            <p class="timeline-title">Completion of Rudramani Project</p>
+                            <p class="timeline-desc">Marking the completion of Rudramani Project, Group Nirmal shifted corporate operations to Rudramani Builduing.</p>
                         </div>
                         <div class="timeline-image" data-aos="fade" data-aos-duration="1000">
                             <img src="assets/images/timeline/2018.jpg" alt="image">
@@ -213,9 +213,9 @@
                     <!-- Slide 10 -->
                     <div class="swiper-slide timeline-slide">
                         <div class="timeline-content" data-aos="fade" data-aos-duration="1000">
-                            <h2>2019</h2>
-                            <h3>First export container order from Deulti</h3>
-                            <p>Commencing our export operations, we shipped our first order from the Deulti plant.</p>
+                            <span>2019</span>
+                            <p class="timeline-title">First export container order from Deulti</p>
+                            <p class="timeline-desc">Commencing our export operations, we shipped our first order from the Deulti plant.</p>
                         </div>
                         <div class="timeline-image" data-aos="fade" data-aos-duration="1000">
                             <img src="assets/images/timeline/2019.jpg" alt="image">
@@ -224,9 +224,9 @@
                     <!-- Slide 11 -->
                     <div class="swiper-slide timeline-slide">
                         <div class="timeline-content" data-aos="fade" data-aos-duration="1000">
-                            <h2>2021</h2>
-                            <h3>Commissioning of Second GI Line</h3>
-                            <p>This major development doubled production capacity at Deulti to 1,20,000 TPA</p>
+                            <span>2021</span>
+                            <p class="timeline-title">Commissioning of Second GI Line</p>
+                            <p class="timeline-desc">This major development doubled production capacity at Deulti to 1,20,000 TPA</p>
                         </div>
                         <div class="timeline-image" data-aos="fade" data-aos-duration="1000">
                             <img src="assets/images/timeline/2021.jpg" alt="image">
@@ -235,9 +235,9 @@
                     <!-- Slide 12 -->
                     <div class="swiper-slide timeline-slide">
                         <div class="timeline-content" data-aos="fade" data-aos-duration="1000">
-                            <h2>2022</h2>
-                            <h3>Launch of NIZNAL<sup>®</sup></h3>
-                            <p>Launch of NIZNAL<sup>®</sup> wires, a special zinc-aluminum coated steel wire.</p>
+                            <span>2022</span>
+                            <p class="timeline-title">Launch of NIZNAL<sup>®</sup></p>
+                            <p class="timeline-desc">Launch of NIZNAL<sup>®</sup> wires, a special zinc-aluminum coated steel wire.</p>
                         </div>
                         <div class="timeline-image" data-aos="fade" data-aos-duration="1000">
                             <img src="assets/images/timeline/2022.png" alt="image">
@@ -246,9 +246,9 @@
                     <!-- Slide 13 -->
                     <div class="swiper-slide timeline-slide">
                         <div class="timeline-content" data-aos="fade" data-aos-duration="1000">
-                            <h2>2023</h2>
-                            <h3>Launch of Nirmal Cables</h3>
-                            <p>Roll out of our first batch of cables which have now become a significant part of our Nation’s infrastructure.</p>
+                            <span>2023</span>
+                            <p class="timeline-title">Launch of Nirmal Cables</p>
+                            <p class="timeline-desc">Roll out of our first batch of cables which have now become a significant part of our Nation’s infrastructure.</p>
                         </div>
                         <div class="timeline-image" data-aos="fade" data-aos-duration="1000">
                             <img src="assets/images/timeline/2023.jpg" alt="image">
@@ -257,9 +257,9 @@
                     <!-- Slide 14 -->
                     <div class="swiper-slide timeline-slide">
                         <div class="timeline-content" data-aos="fade" data-aos-duration="1000">
-                            <h2>2024</h2>
-                            <h3>Acquisition of CeeDee Metalloys</h3>
-                            <p>Acquisition of CeeDee Metalloys in Bangalore. With an annual production capacity of 6000 MT, this manufacturing facility added Zinc Wires, Zinc-Aluminum Wires and Zinc Wire rods to our product portfolio.</p>
+                            <span>2024</span>
+                            <p class="timeline-title">Acquisition of CeeDee Metalloys</p>
+                            <p class="timeline-desc">Acquisition of CeeDee Metalloys in Bangalore. With an annual production capacity of 6000 MT, this manufacturing facility added Zinc Wires, Zinc-Aluminum Wires and Zinc Wire rods to our product portfolio.</p>
                         </div>
                         <div class="timeline-image" data-aos="fade" data-aos-duration="1000">
                             <img src="assets/images/timeline/2024-1.jpeg" alt="image">
@@ -268,9 +268,9 @@
                     <!-- Slide 15 -->
                     <div class="swiper-slide timeline-slide">
                         <div class="timeline-content" data-aos="fade" data-aos-duration="1000">
-                            <h2>2024</h2>
-                            <h3>Acquisition of Khordha Plant</h3>
-                            <p>Acquisition of Hindustan Urban Infrastructure’s Khordha unit. This plant with an annual production capacity of 30,000 MT added Aluminum Wire rods to our portfolio & expands our capacity of Aluminum Conductor production.</p>
+                            <span>2024</span>
+                            <p class="timeline-title">Acquisition of Khordha Plant</p>
+                            <p class="timeline-desc">Acquisition of Hindustan Urban Infrastructure’s Khordha unit. This plant with an annual production capacity of 30,000 MT added Aluminum Wire rods to our portfolio & expands our capacity of Aluminum Conductor production.</p>
                         </div>
                         <div class="timeline-image" data-aos="fade" data-aos-duration="1000">
                             <img src="assets/images/timeline/2024-2.jpeg" alt="image">
@@ -308,7 +308,7 @@
     <section class="brand-story">
         <div class="overlay"></div>
         <div class="brand-story-content">
-            <h1 data-aos="fade" data-aos-duration="1000">BRAND STORY</h1>
+            <h3 data-aos="fade" data-aos-duration="1000">BRAND STORY</h3>
             <p data-aos="fade" data-aos-duration="1000">More than a brand, Nirmal is a legacy built on the foundation of quality, innovation, and customer centricity. Right from our motto “Re imagineering Tomorrow” which shows our will to re-imagine and re-engineer tomorrow to our logo which represents a passion for growth and diversification, Nirmal is a spirit of relentless pursuit to achieve excellence, striving to create a better future for all.</p>
             <p data-aos="fade" data-aos-duration="1000">Rooted deep into our culture of innovation is a mindset where challenges are viewed as opportunities for growth. This is what fuels our dedication to delivering cutting-edge solutions that exceed customer expectations, with quality being a crucial part of what we offer.</p>
         </div>
@@ -322,7 +322,7 @@
                 <img src="assets/images/md.jpeg" alt="MD">
             </div>
             <div class="chairman-desc">
-                <h1 data-aos="fade" data-aos-duration="1000">MD Message</h1>
+                <h4 data-aos="fade" data-aos-duration="1000">MD Message</h4>
                 <p data-aos="fade" data-aos-duration="1000">In the limelight of our unwavering commitment to innovation, sustainability, and inclusive growth, I am thrilled to introduce the latest additions to our distinguished portfolio - NIZNAL™ and Nirmal Cables. These groundbreaking offerings stand as a testament to our tireless dedication to quality, performance, and technological advancement. <br> <br> With Enthusiasm and Gratitude, </p>
                 <div class="chairman-desc-foot" data-aos="fade" data-aos-duration="1000">
                     <p>From the Desk of Managing Director <br> <b> MR. NIRMAL SARAF</b></p>
@@ -339,8 +339,8 @@
             <div class="card-img">
                 <img src="assets/images/vision.png" alt="icon" data-aos="zoom-in" data-aos-duration="1000">
             </div>
-            <h1 data-aos="fade" data-aos-duration="1000">VISION</h1>
-            <h2 data-aos="fade" data-aos-duration="1000">“To be an Innovative and Sustainable Value Creator Ethically Promoting Inclusive Growth.”</h2>
+            <h5 data-aos="fade" data-aos-duration="1000">VISION</h5>
+            <h6 data-aos="fade" data-aos-duration="1000">“To be an Innovative and Sustainable Value Creator Ethically Promoting Inclusive Growth.”</h6>
             <p data-aos="fade" data-aos-duration="1000">Our constant desire is to improve our product quality and provide excellent service to our customers. We incorporate customer feedback to strengthen our product quality, making considerable investment In our technology and quality control equipment. Aiming to access new markets to enlarge our customer base, we want you to have RELIABILITY, CONFIDENCE AND FAITH in us.</p>
         </div>
         <!-- Mission -->
@@ -348,8 +348,8 @@
             <div class="card-img">
                 <img src="assets/images/mission.png" alt="icon" data-aos="zoom-in" data-aos-duration="1000">
             </div>
-            <h1 data-aos="fade" data-aos-duration="1000">MISSION</h1>
-            <h2 data-aos="fade" data-aos-duration="1000">Our mission is to establish brand “NIRMAL” by</h2>
+            <h5 data-aos="fade" data-aos-duration="1000">MISSION</h5>
+            <h6 data-aos="fade" data-aos-duration="1000">Our mission is to establish brand “NIRMAL” by</h6>
             <p data-aos="fade" data-aos-duration="1000">1. Achieving Excellence in all Activities</p>
             <p data-aos="fade" data-aos-duration="1000">2. Innovate Continually</p>
             <p data-aos="fade" data-aos-duration="1000">3. Manufacture at Optimum Cost</p>
@@ -361,7 +361,7 @@
     <!-- Contact Us Start -->
     <section class="contact-us">
         <div class="contact-us-content">
-            <h1>Innovation starts with the right partner</h1>
+            <h6>Innovation starts with the right partner</h6>
             <p>Join industry leaders who trust Group Nirmal for performance and reliability. <br> Are you ready to re-imagineer tomorrow?</p>
             <a href="contact.html"><button>GET IN TOUCH</button></a>
         </div>
