Fix links for AL 59 aluminium conductor: updated file names to lowercase and added new product page.

--- a/aluminium-products.html
+++ b/aluminium-products.html
@@ -137,7 +137,7 @@
                 <p>All Aluminium Alloy Conductors, or AAAC conductors are crafted from...</p>
             </a>
             <!-- Card 4 -->
-            <a  href="AL 59.html" class="category-card" data-aos="fade" data-aos-duration="1000">
+            <a  href="al-59.html" class="category-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-image">
                     <img src="assets/images/products/AL 59 aluminium conductor.png" alt="image">
                 </div>
