--- a/products.html
+++ b/products.html
@@ -617,16 +617,16 @@
                                     <!-- Card 4 -->
                                     <div class="col-md-4 col-sm-6 mb-5">
                                         <div class="card border-0 h-100">
-                                            <div class="card-img" onclick="window.open('AL 59.html', '_self');">
+                                            <div class="card-img" onclick="window.open('al-59.html', '_self');">
                                                 <img class="img-fluid"
                                                     src="assets/images/products/AL 59 aluminium conductor.png"
                                                     alt="product">
                                             </div>
-                                            <div class="card-body" onclick="window.open('AL 59.html', '_self');">
+                                            <div class="card-body" onclick="window.open('al-59.html', '_self');">
                                                 <span class="text-uppercase mb-0">AL 59 Aluminium Conductor</span>
                                             </div>
                                             <div class="card-footer border-0 bg-transparent">
-                                                <a href="AL 59.html" class="btn">EXPLORE</a>
+                                                <a href="al-59.html" class="btn">EXPLORE</a>
                                             </div>
                                         </div>
                                     </div>
@@ -929,16 +929,16 @@
                                     <!-- Card 4 -->
                                     <div class="col-md-4 col-sm-6 mb-5">
                                         <div class="card border-0 h-100">
-                                            <div class="card-img" onclick="window.open('AL 59.html', '_self');">
+                                            <div class="card-img" onclick="window.open('al-59.html', '_self');">
                                                 <img class="img-fluid"
                                                     src="assets/images/products/AL 59 aluminium conductor.png"
                                                     alt="product">
                                             </div>
-                                            <div class="card-body" onclick="window.open('AL 59.html', '_self');">
+                                            <div class="card-body" onclick="window.open('al-59.html', '_self');">
                                                 <span class="text-uppercase mb-0">AL 59 Aluminium Conductor</span>
                                             </div>
                                             <div class="card-footer border-0 bg-transparent">
-                                                <a href="AL 59.html" class="btn">EXPLORE</a>
+                                                <a href="al-59.html" class="btn">EXPLORE</a>
                                             </div>
                                         </div>
                                     </div>
