--- a/login.html
+++ b/login.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <title>Admin Login</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Link to Canonical -->
+  <link rel="canonical" href="https://groupnirmal.com/login.html">
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
