Enhance performance and accessibility by adding 'loading="lazy"' to images across multiple HTML files, improving page load times. Update blog title headings for better semantic structure. Change download brochure links to use '#' for improved link handling.

--- a/Nirmal-6013.html
+++ b/Nirmal-6013.html
@@ -111,7 +111,7 @@
             <p data-aos="fade" data-aos-duration="1200">Nirmal 6013 welding electrodes are versatile, rutile-based electrodes for general-purpose mild steel welding. They offer smooth arc initiation, stable arc performance, and easy slag removal, producing high-quality welds with minimal spatter. Compatible with AC and DC power sources, they are suitable for various welding setups and skill levels. Ideal for construction, fabrication, and maintenance, these electrodes ensure reliable and efficient welding.</p>
             <div class="banner-btn-row">
                 <a href="contact.html"><button>Enquire Now</button></a>
-                <a href="" target="_blank"><button>Download Brochure</button></a>
+                <a href="#" target="_blank"><button>Download Brochure</button></a>
             </div>
         </div>
     </section> 
