--- a/coming-soon.html
+++ b/coming-soon.html
@@ -106,7 +106,7 @@
         <video src="assets/videos/coming-soon.mp4" loop muted autoplay></video>
         <div class="banner-layer">
             <h1>This page is still under construction</h1>
-            <p>Exciting content is on the way! Check back soon for the full experience.</p>
+            <h2>Exciting content is on the way! Check back soon for the full experience.</h2>
         </div>
     </section> 
     <!-- Banner End -->
