--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
 
     <!-- Banner Start -->
     <section class="about-banner">
-        <img src="assets/images/about-banner.webp" alt="image">
+        <img src="assets/images/about-banner.webp" alt="image" loading="lazy">
         <div class="banner-layer"></div>
         <h1 data-aos="fade-up" data-aos-duration="1200">CONTACT US</h1>
     </section>
