--- a/zinc-aluminium-wire.html
+++ b/zinc-aluminium-wire.html
@@ -111,7 +111,7 @@
             <p data-aos="fade" data-aos-duration="1200">Zinc-aluminium wires are a composite material that combine the properties of zinc and aluminium. Slender and ductile, these filaments are composed primarily of zinc and aluminium, often alloyed with other elements to enhance specific mechanical characteristics to suit various requirements. This alloy combination results in a material that possesses superior corrosion resistance, electrical conductivity, and mechanical strength compared to pure zinc wire. Zinc-aluminium wire is commonly used in various applications, including galvanising, soldering, and electrical wiring.</p>
             <div class="banner-btn-row">
                 <a href="contact.html"><button>Enquire Now</button></a>
-                <a href="" target="_blank"><button>Download Brochure</button></a>
+                <a href="#" target="_blank"><button>Download Brochure</button></a>
             </div>
         </div>
     </section> 
