--- a/zinc-metalizing-spray-machine.html
+++ b/zinc-metalizing-spray-machine.html
@@ -111,7 +111,7 @@
             <p data-aos="fade" data-aos-duration="1200">The lightweight, portable zinc metalizing spray machine simplifies coating with its push-wire delivery system. It requires minimal maintenance and offers versatile applications across industries. Our expertise in arc spraying and metallizing ensures precise coating for metals, carbides, and ceramics, providing long-lasting protection.</p>
             <div class="banner-btn-row">
                 <a href="contact.html"><button>Enquire Now</button></a>
-                <a href="" target="_blank"><button>Download Brochure</button></a>
+                <a href="#" target="_blank"><button>Download Brochure</button></a>
             </div>
         </div>
     </section> 
