--- a/zinc-rods.html
+++ b/zinc-rods.html
@@ -111,7 +111,7 @@
             <p data-aos="fade" data-aos-duration="1200">Zinc rods are cylindrical metallic bars primarily composed of zinc, a reactive metal known for its corrosion-resistant properties. They are manufactured using virgin quality (ZN 99.995%, according to EN 1179-Z1) ingots in various diameters and lengths, offering versatility in their applications. Zinc rods are characterised by their silvery-grey colour and malleability, allowing them to be easily machined and shaped. Their surface can exhibit a range of finishes, from bright and shiny to matte and oxidised, depending on the specific manufacturing process and intended use.</p>
             <div class="banner-btn-row">
                 <a href="contact.html"><button>Enquire Now</button></a>
-                <a href="" target="_blank"><button>Download Brochure</button></a>
+                <a href="#" target="_blank"><button>Download Brochure</button></a>
             </div>
         </div>
     </section> 
