--- a/zinc-wire.html
+++ b/zinc-wire.html
@@ -111,7 +111,7 @@
             <p data-aos="fade" data-aos-duration="1200">Zinc wire is a slender, ductile metallic filament composed primarily of zinc, a naturally occurring element which is known for its highly reactive nature. Zinc wires are manufactured  using  special high-grade zinc ingots (99.995% pure, according to EN 1179 - "Z1") in various diameters and lengths, which depend on its applications. They are easily shaped and formed into different configurations, with the surface finish varying according to specific manufacturing process and intended use.</p>
             <div class="banner-btn-row">
                 <a href="contact.html"><button>Enquire Now</button></a>
-                <a href="" target="_blank"><button>Download Brochure</button></a>
+                <a href="#" target="_blank"><button>Download Brochure</button></a>
             </div>
         </div>
     </section> 
